projects/vb6parse/snapshots/syntax/statements/file_operations/reset/reset_at_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/file_operations/reset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: ResetStatement
      children:
        - kind: ResetKeyword
          text: Reset
    - kind: Newline
      text: "\n"
